--- a/mystyle.css
+++ b/mystyle.css
@@ -13,7 +13,7 @@ body {
 }
 
 .media {
-    background-image: url(dongiovani.jpg);
+    background-image: url(Don_Giovanni.jpg);
     height: 140px;
     margin-top: 0.5em;
     margin-left: 0px;
